[tool.poetry]
authors = ["Matthias Richter <mrichter@caltech.edu>", "Dan Guevarra <guevarra@caltech.edu>", "Michael Statt <michael.statt@modelyst.io>"]
description = "The core codebase for the HELAO High Throughoutput Experimentation code base."
name = "helao"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.8"
aiofiles = "^0.8"
aiohttp = "^3.8"
bokeh = "^2.4"
boto3 = "^1.23"
botocore = "^1.26"
colorama = "^0.4"
comtypes = "^1.1"
databases = "^0.5"
fastapi = "^0.78"
ipykernel = "^6.13"
munch = "^2.5"
nidaqmx = "^0.6"
ntplib = "^0.4"
numpy = "^1.22"
pandas = "^1.4"
paramiko = "^2.11"
psutil = "^5.9"
pyaml = "^21.10"
pybase64 = "^1.2"
pydantic = "^1.9"
pyfiglet = "^0.8"
requests = "^2.27"
"ruamel.yaml" = "^0.17"
shortuuid = "^1.0"
sqlalchemy = "^1.4"
starlette = "^0.19"
termcolor = "^1.1"
uvicorn = "^0.17"
websockets = "^10.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
reportOptionalMemberAccess = false
reportGeneralTypeIssues = false